2008-03-22  Brian Warner  <warner@lothar.com>

	* buildbot/test/test_vc.py (Mercurial.serveHTTP): wait for the 'hg
	serve' command to be ready, by polling with twisted.web's
	client.getPage . Unfortunately mercurial doesn't flush its stdout
	at startup, so we can't just wait for the 'listening at..' line to
	be printed. This should fix the sporadic "connection refused" test
	failures I've seen on the metabuildbot when the buildslave is
	overloaded and 'hg serve' takes a while to start up.

	* buildbot/steps/python_twisted.py (TrialTestCaseCounter): modify
	regexp to count "Doctest:" lines as well as normal tests. Thanks to
	Martin Geisler for the patch. Closes #196.

2008-03-20  Brian Warner  <warner@lothar.com>

	* buildbot/status/web/waterfall.py (CurrentBox.formatETA): apply
	patch from TedMielczarek to display hours/minutes/seconds in the
	ETA display. Thanks Ted! Also make 'next build starts in' box use
	the same format. Closes #95.

	* buildbot/process/buildstep.py (render_properties): more cleanup:
	rename 'render' to 'render_properties'.
	* buildbot/steps/shell.py: same
	(ShellCommand._interpolateProperties): tolerate None in the value,
	clean up the isinstance checks, stop using the 'types' module

	* buildbot/steps/transfer.py (FileUpload.start): same, other cleanups

	* buildbot/steps/shell.py (render): oops, remove redundant
	definition that probably crept in during a merge conflict

	* buildbot/scheduler.py (Triggerable): cleanup: wrap docstring
	* buildbot/steps/trigger.py (Trigger): cleanup: rename schedulers=
	to schedulerNames=, make updateSourceStamp=True by default, tolerate
	missing got_revision property (i.e. if updateSourceStamp=True but
	there was no checkout/update step run), add TODO notes for further
	cleanup.
	* buildbot/test/test_run.py (Triggers): update to match
	* docs/buildbot.texinfo (Build Dependencies): same

	* buildbot/slave/commands.py (SVN.doVCFull): merge Dustin's patch: